--- a/react-advance-class/shopping-cart-app-using-redux/src/components/Spinner.css
+++ b/react-advance-class/shopping-cart-app-using-redux/src/components/Spinner.css
@@ -11,7 +11,7 @@
   grid-area: 1/1;
   border: 9px solid;
   border-radius: 50%;
-  border-color: #474bff #474bff #0000 #0000;
+  border-color: #02a518 #02a518 #0000 #0000;
   mix-blend-mode: darken;
   animation: spinner-plncf9 1s infinite linear;
 }
@@ -23,6 +23,6 @@
 
 @keyframes spinner-plncf9 {
   100% {
-     transform: rotate(1turn);
+    transform: rotate(1turn);
   }
 }
